@@ -7,48 +7,17 @@
   </component>
   <component name="ChangeListManager">
     <list default="true" id="351e7919-2d3b-43af-9078-aedc18c98eec" name="Default Changelist" comment="">
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/balloon/button/button.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/balloon/button/button_hover.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/balloon/button/button_press.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/caramel/button/button.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/caramel/button/button_hover.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/caramel/button/button_press.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/classic/button/button.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/classic/button/button_hover.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/classic/button/button_press.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/eggplant/button/button.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/eggplant/button/button_hover.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/eggplant/button/button_press.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/jungle/button/button.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/jungle/button/button_hover.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/jungle/button/button_press.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/ocean/button/button.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/ocean/button/button_hover.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/ocean/button/button_press.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/punk/button/button.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/punk/button/button_hover.png" afterDir="false" />
-      <change afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/punk/button/button_press.png" afterDir="false" />
+      <change afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/util/AePlayWave.java" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/.idea/workspace.xml" beforeDir="false" afterPath="$PROJECT_DIR$/.idea/workspace.xml" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/build.gradle" beforeDir="false" afterPath="$PROJECT_DIR$/build.gradle" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/changelog.txt" beforeDir="false" afterPath="$PROJECT_DIR$/changelog.txt" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/Main.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/Main.java" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/core/ProblemMine.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/core/ProblemMine.java" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/core/WorkTable.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/core/WorkTable.java" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/minigame/minesweeper/PanelMineSweeper.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/minigame/minesweeper/PanelMineSweeper.java" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/minigame/snake/PanelSnake.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/minigame/snake/PanelSnake.java" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/panel/PanelGame.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/panel/PanelGame.java" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/panel/PanelProblem.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/panel/PanelProblem.java" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/util/Preference.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/util/Preference.java" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/util/FuncBox.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/util/FuncBox.java" afterDir="false" />
+      <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/util/MediaRef.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/util/MediaRef.java" afterDir="false" />
       <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/util/Reference.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/util/Reference.java" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/util/TextureHolder.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/util/TextureHolder.java" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/widget/ButtonCoral.java" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/java/com/fieryslug/reinforcedcoral/widget/ButtonCoral.java" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/chembio/1_2.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/chembio/1_2.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/lit/1_2.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/lit/1_2.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/1_1.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/1_1.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/2_1.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/2_1.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/3.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/3.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/6.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/physmath/6.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/problems/1/socio/3.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/problems/1/socio/3.json" afterDir="false" />
-      <change beforePath="$PROJECT_DIR$/src/main/resources/res/texturepack/keys.json" beforeDir="false" afterPath="$PROJECT_DIR$/src/main/resources/res/texturepack/keys.json" afterDir="false" />
     </list>
     <option name="EXCLUDED_CONVERTED_TO_IGNORED" value="true" />
     <option name="SHOW_DIALOG" value="false" />
@@ -349,7 +318,9 @@
       <workItem from="1565519519515" duration="2616000" />
       <workItem from="1565522164623" duration="39000" />
       <workItem from="1565527664567" duration="19886000" />
-      <workItem from="1565591895369" duration="3527000" />
+      <workItem from="1565591895369" duration="10830000" />
+      <workItem from="1565603971912" duration="778000" />
+      <workItem from="1565607118827" duration="299000" />
     </task>
     <servers />
   </component>
